kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: msg-namespace
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: martinanajdovska/unsent-message-project-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
