kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: msg-namespace
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  clusterIP: None
